# gitflow-analytics

./: .env.example  .env.sample  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .secrets.baseline.new  .trackdown.yaml  BRANCH_OPTIMIZATION_SUMMARY.md  CACHE_ATOMIC_VERIFICATION_REPORT.md  CACHE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMIT_CLASSIFICATION_AGGREGATE_REPORT.md  COMMIT_CLASSIFICATION_ANALYSIS_REPORT.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE_1.2.1.md  CONTRIBUTING.md  EWTN_CLASSIFICATION_ANALYSIS.md  EWTN_CLASSIFICATION_GUIDE.md  EWTN_CLASSIFICATION_IMPROVEMENTS_REPORT.md  HOTFIX_PLAN_1.0.9.md  Makefile  PUBLICATION_READINESS_SUMMARY.md  README.md  RELEASE.md  RELEASE_NOTES_1.0.9.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.2.0.md  RELEASE_SUMMARY_1.0.9.md  YAML_ERROR_HANDLING_TEST_REPORT.md  check_jira_story_points.py  debug_git_stats.py  debug_story_points.py  dev-gitflow-analytics.sh  ewtn_classification_executive_report.md  fix_line_counting.py  gitflow-dev  ml_test_results.json  package-lock.json  (+11 more)
.claude-mpm/: configuration.yaml
.claude-mpm/config/: project.json
.claude-mpm/memories/: data-engineer_agent.md  data_engineer_memories.md  documentation_memories.md  engineer_memories.md  ops_agent.md  qa_agent.md  research_memories.md  security_memories.md
.claude/agents/: .dependency_cache  .mpm_deployment_state  agent-manager.md  agentic_coder_optimizer.md  api_qa.md  code_analyzer.md  data_engineer.md  documentation.md  engineer.md  gcp_ops_agent.md  imagemagick.md  memory_manager.md  ops.md  project_organizer.md  qa.md  refactoring_engineer.md  research.md  security.md  test-non-mpm.md  ticketing.md  vercel_ops_agent.md  version_control.md  web_qa.md  web_ui.md
.github/workflows/: comprehensive-tests.yml  release.yml  semantic-release.yml  tests.yml
.kuzu-memory-backups/: settings.local.json.backup_20251106_200811
.makefiles/: common.mk  deps.mk  quality.mk  release.mk  testing.mk
.open-mpm/state/: build.json  sessions.json
.qualitative_cache/: llm_costs.json
configs/: config.yaml  debug-config.yaml  local-test-config.yaml
docs/: LLM_COMMIT_CLASSIFICATION_IMPLEMENTATION.md  README.md  STRUCTURE.md  chatgpt-setup.md  cicd-integration-implementation-summary.md
docs/architecture/: README.md
docs/bugs/: narrative-report-issues-20250809.md
docs/configuration/: advanced.md  configuration.md
docs/design/: azure-devops-decisions.md  azure-devops-integration-plan.md  gitflow_tui_app.py
docs/getting-started/: installation.md
docs/maintenance/: code-review-08-14-2025.md
docs/managers/: README.md  dashboard-guide.md  faq.md  interpreting-reports.md  metrics-reference.md  quickstart.md
docs/reference/: cli-commands.md  configuration-schema.md
ewtn_classification_demo_results/: ewtn_classification_analysis_2024-06-01.json  ewtn_executive_summary.csv
examples/: README.md
examples/config/: config-classification-example.yaml  config-jira-resilient.yaml  config-pm-sample.yaml  config-qualitative-sample.yaml  config-recess.yaml  config-sample-ml.yaml  config-sample.yaml
examples/scripts/: debug_jira_auth.py  validate_classification_integration.py
override-reports/: developers_20250729.csv  summary_20250729.csv  weekly_metrics_20250729.csv
reports-anon/: developers_20250729.csv  summary_20250729.csv  weekly_metrics_20250729.csv
scripts/: debug_bulk_exists.py  debug_commit_story_points.py  debug_config.py  debug_database_storage.py  debug_env.py  debug_git_auth.py  debug_jira_enrichment.py  debug_march_2025_comparison.py  debug_qualitative_detection.py  debug_security.py  debug_story_points.py  debug_story_points_analysis.py  demo_ewtn_classification.py  ewtn_technical_analysis_summary.py  fix_identity_database.py  fix_pm_config.py  manage_version.py  test_git_cloning.py  test_git_cloning_simple.py  train_ewtn.py  validate_classification_integration.py
src/gitflow_analytics/: _version.py  cli.py  cli_analysis.py  cli_analysis_helpers.py  cli_analysis_modes.py  cli_analysis_orchestrator.py  cli_backfill_ai_detection.py  cli_backfill_revert_flags.py  cli_backfill_ticket_ids.py  cli_fetch.py  cli_formatting.py  cli_identity.py  cli_identity_alias_ops.py  cli_identity_commands.py  cli_overrides.py  cli_pipeline_commands.py  cli_pr_metrics.py  cli_rich.py  cli_setup.py  cli_training.py  cli_utils.py  config.py  constants.py  pipeline.py  pipeline_classify.py  pipeline_collect.py  pipeline_report.py  pipeline_types.py  verify_activity.py
test-identity-reports/: developer_focus_20250801.csv  developers_20250801.csv  identity_analysis_20250801.yaml
test-qa-install/: README.md  test_1_output.txt  test_github_invalid.exp  test_input.txt  test_results.md
test-qa-install/test-skip-validation/: config.yaml
test-reports/: test_narrative_report.md
tests/: conftest.py  run_all_tests.py  run_security_all_repos.py  test-config-minimal.yaml  test_activity_scoring_ticketing.py  test_add_alias_command.py  test_branch_analysis.py  test_branch_direct.py  test_branch_fetching.py  test_branch_simple.py  test_branch_verification.py  test_cache_invalidation.py  test_circuit_breaker.py  test_classification_coverage.py  test_classification_overrides.py  test_cli.py  test_config.py  test_config_minimal.yaml  test_config_profiles.py  test_config_story_points.py  test_ewtn_classification.py  test_ewtn_llm_classification.py  test_identity_llm_analyzer.py  test_install_wizard.py  test_interactive_launcher.py  test_jira_project_key_classifier.py  test_llm_commit_classification.py  test_march_2025_comparison.py  test_metrics.py  test_ml_accuracy.py  test_pipeline.py  test_pm_env_resolution.py  test_reports.py  test_training_pipeline.py  test_two_step_process.py  test_weekly_pr_metrics.py
tests/core/: test_analyzer.py  (+11 more)
(+314 files in other folders)
